2006-05-11  Michael Natterer  <mitch@gimp.org>

	* app/pdb/gimppdb-query.c (gimp_pdb_proc_info): restored old
	version of this function, it was correct after all (spotted by
	Kevin Cozens).

2006-05-11  Michael Natterer  <mitch@gimp.org>

	Applied modified patch from Michael J. Hammel which allows to
	remove all keyboard shortcuts from the menus (fixes bug #331839):

	* app/dialogs/preferences-dialog.c: added "Remove all keyboard
	shortcuts" button to the "Interface" section.

	* app/menus/menus.[ch]: added menus_remove() which does the
	shortcut removal.

2006-05-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimpviewrendererbrush.c
	* app/widgets/gimpviewrendererbuffer.c: use
	gimp_viewable_get_size() and get rid of useless
	local "brush" and "buffer" variables.

2006-05-10  Michael Natterer  <mitch@gimp.org>

	* app/widgets/gimptoolbox.c: code cleanup, no logic changed.

	* app/widgets/gimptoolbox-color-area.c: make the very first click
	on the color area work as expected.

2006-05-10  Sven Neumann  <sven@gimp.org>

	* app/composite/gimp-composite-mmx.c
	(gimp_composite_swap_rgba8_rgba8_rgba8_mmx): applied patch from
	Mukund that replaces remaining movntq instructions in MMX assembly
	(bug #162778).

2006-05-09  Simon Budig  <simon@gimp.org>

	* themes/Default/images/stock-color-triangle-16.png: New icon
	to reflect the corrected triangular color selector.

2006-05-09  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage.c (gimp_image_new)
	* app/core/gimpitem.c (gimp_item_configure)
	* app/display/gimpdisplay.c (gimp_display_new): make sure IDs wrap
	correctly at G_MAXINT and skip IDs which are currently in use.

	It makes no sense to treat gimp->image_table and gimp->images
	differently, since they keep the same set of images. And it makes
	no sense to treat gimp->displays and gimp->images differently.
	Moved all container adding into the objects' constructors:

	* app/core/gimp.c (gimp_create_image): don't add the new image