@@ -1,3 +1,8 @@
+2006-05-12  Michael Natterer  <mitch@gimp.org>
+
+	* app/config/Makefile.am: make test-config link again.
+	Fixes bug #340601.
+
 2006-05-11  Michael Natterer  <mitch@gimp.org>
 
 	* app/pdb/gimppdb-query.c (gimp_pdb_proc_info): restored old
